--- a/public/css/utils/fonts.css
+++ b/public/css/utils/fonts.css
@@ -1,4 +1,5 @@
-/* Text-size styles */
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 .heading-1 {
   font-size: var(--heading---heading-1);
   font-weight: 600;
@@ -31,7 +32,7 @@
 
 .text-medium-bold {
   font-size: var(--text---medium--bold);
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.125rem;
 }
 
