about page complete

--- a/public/css/utils/breadcrumb.css
+++ b/public/css/utils/breadcrumb.css
@@ -1,6 +1,8 @@
 .breadcrumb {
   padding-top: var(--small);
   padding-bottom: var(--large-extra);
+  margin-left: var(--side-gutter);
+  margin-right: var(--side-gutter);
   /* margin-bottom: var(--large); */
 }
 
