--- a/public/css/components/header-type-1.css
+++ b/public/css/components/header-type-1.css
@@ -1,4 +1,3 @@
-/* NAVIGATION BAR */
 .main-nav {
   background: var(--red-gradient);
   display: flex;
@@ -37,16 +36,15 @@
 
 .right-section {
   display: inline-flex;
-  justify-content: flex-end;
   align-items: center;
+
+  /* display: grid; */
+  /* grid-template-columns: repeat(2, auto); */
+  /* place-items: center; */
 }
 
-.right-section li {
-  display: inline;
-}
-
-.right-section > li:first-child {
-  padding-right: var(--small);
+.right-section > * {
+  height: 40%;
 }
 
 .top-section {
@@ -64,31 +62,6 @@
   display: none;
 }
 
-.search-form {
-  height: 30px;
-  position: relative;
-  background: none;
-
-  border-top-right-radius: var(--rounded-normal);
-  border-bottom-right-radius: var(--rounded-normal);
-
-  padding-top: var(--small);
-  padding-left: var(--medium);
-  padding-right: var(--large-ultimate);
-}
-
-.search-form > svg {
-  cursor: pointer;
-  position: absolute;
-  top: 7px;
-  right: 8px;
-  stroke: var(--surface);
-}
-
-.search-box {
-  display: none;
-}
-
 .btn__mobile-nav {
   background: none;
   border: none;
@@ -100,12 +73,11 @@
   padding: 0 var(--medium);
 }
 
-.btn__mobile-nav > svg {
-  fill: var(--surface-dim);
+.btn__mobile-nav svg {
   vertical-align: bottom;
 }
 
-.btn__mobile-nav:hover > svg {
+.btn__mobile-nav:hover svg {
   fill: var(--surface);
 }
 
@@ -196,7 +168,9 @@
   }
 
   .secondary-links > .nav-links {
-    display: inline-block;
+    height: 100%;
+    display: inline-flex;
+    align-items: center;
     background-color: var(--red-dim);
     padding: var(--small) var(--medium);
   }
@@ -254,44 +228,6 @@
 
   .sub-menu__right a {
     color: var(--red-dim);
-  }
-
-  /* Search Box */
-  .search-form:focus-within {
-    background-color: var(--surface-dim);
-  }
-
-  .search-form {
-    background-color: var(--red);
-  }
-
-  .search-form:focus-within > svg {
-    stroke: var(--surface-shade);
-    fill: var(--surface-shade);
-  }
-
-  .search-box {
-    width: 15ch;
-    display: inline-block;
-    background-color: var(--red);
-    color: var(--surface);
-    vertical-align: top;
-    border: none;
-    outline: none;
-  }
-
-  .search-form:focus-within input {
-    background-color: var(--surface-dim);
-    color: var(--surface-shade);
-  }
-
-  .search-form input::placeholder {
-    color: var(--surface);
-    font-size: var(--text---small-extra);
-  }
-
-  .search-form:focus-within input::placeholder {
-    color: var(--surface-shade);
   }
 
   .btn__mobile-nav {
