--- a/public/css/utils/search-box.css
+++ b/public/css/utils/search-box.css
@@ -1,53 +1,61 @@
 .search-form {
-  width: 128px;
-  height: 30px;
+  height: 100%;
+  background: none;
   position: relative;
-  background-color: var(--red);
   padding: var(--small) var(--medium);
+
+  display: flex;
+  gap: var(--small);
+
   border-top-right-radius: var(--rounded-normal);
   border-bottom-right-radius: var(--rounded-normal);
 }
 
-.search-form:focus-within {
+.search-form[aria-selected="true"] {
   background-color: var(--surface-dim);
+
+  & svg {
+    stroke: var(--surface-shade);
+    fill: var(--surface-shade);
+  }
+
+  & input,
+  & input::placeholder {
+    color: var(--surface-shade);
+  }
 }
 
-.search-form svg {
-  position: absolute;
-  top: 7px;
-  right: 8px;
-  stroke: var(--surface);
-  stroke-width: 3;
-}
-
-.search-form:focus-within svg {
-  stroke: var(--surface-shade);
-  fill: var(--surface-shade);
-}
-
-.search-form input {
-  width: 88px;
-  height: 14px;
-
-  background-color: var(--red);
-  color: var(--surface);
-  font-size: var(--text---small-extra);
-
+.search-box {
+  display: none;
+  width: 15ch;
   vertical-align: top;
+
   border: none;
   outline: none;
+  background: none;
+  color: var(--surface);
 }
 
-.search-form:focus-within input {
-  background-color: var(--surface-dim);
-  color: var(--surface-shade);
-}
-
-.search-form input::placeholder {
+.search-box::placeholder {
   color: var(--surface);
   font-size: var(--text---small-extra);
 }
 
-.search-form:focus-within input::placeholder {
-  color: var(--surface-shade);
+.btn--search {
+  cursor: pointer;
+  background: none;
+  border: none;
+  display: inline-flex;
+}
+
+/* Responsive */
+
+@media (min-width: 1280px) {
+  .search-form {
+    background-color: var(--red);
+  }
+
+  .search-box {
+    display: inline-block;
+  }
 }
