--- a/public/css/core/utils.css
+++ b/public/css/core/utils.css
@@ -43,26 +43,27 @@ a {
 }
 
 /* Gradients */
-.separator-gradient {
+.separator-gradient-block {
+  border-top: 2px solid;
   border-image-slice: 1;
   border-image-source: linear-gradient(
     90deg,
     rgba(0, 0, 0, 0) 0%,
-    rgba(43, 43, 43, 0.6) 15%,
-    #666666 50%,
-    rgba(43, 43, 43, 0.6) 84.5%,
+    rgba(98, 98, 98, 0.6) 15%,
+    rgba(98, 98, 98, 1) 50%,
+    rgba(98, 98, 98, 0.6) 85%,
     rgba(0, 0, 0, 0) 100%
   );
 }
 
-.separator-gradient-vertical {
+.separator-gradient-inline {
   border-image-slice: 1;
   border-image-source: linear-gradient(
     360deg,
     rgba(0, 0, 0, 0) 0%,
-    rgba(43, 43, 43, 0.6) 15%,
-    #666666 50%,
-    rgba(43, 43, 43, 0.6) 84.5%,
+    rgba(98, 98, 98, 0.6) 15%,
+    rgba(98, 98, 98, 1) 50%,
+    rgba(98, 98, 98, 0.6) 85%,
     rgba(0, 0, 0, 0) 100%
   );
 }
