feat: add search

--- a/public/css/core/components/search-box.css
+++ b/public/css/core/components/search-box.css
@@ -1,9 +1,14 @@
+/**
+* Search element in navigation bar
+*/
+
 .search-form {
   height: 100%;
   background: none;
   position: relative;
   padding: var(--small) var(--medium);
 
+  margin-right: 1em;
   display: flex;
   gap: var(--small);
 
@@ -36,6 +41,10 @@
   color: var(--surface);
 }
 
+.search-form[aria-expanded="true"] .search-box {
+  display: inline-block;
+}
+
 .search-box::placeholder {
   color: var(--surface);
   font-size: var(--text---small-extra);
@@ -53,6 +62,7 @@
 @media (min-width: 1280px) {
   .search-form {
     background-color: var(--red);
+    margin-right: 0;
   }
 
   .search-box {
