--- a/public/css/components/search.css
+++ b/public/css/components/search.css
@@ -1,6 +1,5 @@
 .search {
   background: var(--red-gradient);
-  padding: var(--large) 0;
   display: flex;
   justify-content: center;
 }
@@ -8,6 +7,9 @@
 .search-form-large {
   width: 100%;
   max-width: 800px;
+  display: flex;
+  justify-content: space-between;
+  gap: var(--small);
 }
 
 #search-input {
@@ -18,7 +20,6 @@
   border: 1px solid var(--neutral);
   border-radius: var(--rounded-normal);
   outline: none;
-  margin-right: var(--small);
 }
 
 .btn-submit {
