--- a/public/css/core/components.css
+++ b/public/css/core/components.css
@@ -1,4 +1,6 @@
 @import "components/logo.css";
+@import "components/nav-links.css";
+@import "components/sub-menu.css";
 @import "components/events.css";
 @import "components/breadcrumb.css";
 @import "components/search-box.css";
