--- a/public/css/core/components/sub-menu.css
+++ b/public/css/core/components/sub-menu.css
@@ -1,18 +1,22 @@
 /* =============================================
  * Sub Menu Dropdown
  * ===========================================*/
-
-.sub-menu {
-  background-color: var(--surface);
-  display: none;
-  min-width: 180px;
-  border-bottom-left-radius: var(--rounded-normal);
-  border-bottom-right-radius: var(--rounded-normal);
-
+.sub-menu-wrapper {
   position: absolute;
   top: 100%;
   left: 0;
   z-index: 1;
+}
+
+.sub-menu {
+  display: none;
+  min-width: 180px;
+  border-radius: var(--rounded-normal);
+
+  margin: 0.4em 0;
+  margin-left: var(--medium);
+  background-color: var(--surface);
+  box-shadow: var(--drop-shadow);
 
   a {
     color: var(--red-dim);
@@ -24,15 +28,19 @@
 
     &:hover {
       background-color: var(--red-shade-light);
-
       a {
         color: var(--surface);
       }
+    }
 
-      &:last-child {
-        border-bottom-left-radius: var(--rounded-normal);
-        border-bottom-right-radius: var(--rounded-normal);
-      }
+    &:first-child {
+      border-top-left-radius: var(--rounded-normal);
+      border-top-right-radius: var(--rounded-normal);
+    }
+
+    &:last-child {
+      border-bottom-left-radius: var(--rounded-normal);
+      border-bottom-right-radius: var(--rounded-normal);
     }
   }
 }
