--- a/public/css/components/header-type-2.css
+++ b/public/css/components/header-type-2.css
@@ -1,7 +1,7 @@
 .main-nav {
   background: var(--red-gradient);
   color: var(--surface);
-  padding: var(--large-ultimate) var(--large);
+  padding-block: var(--large-ultimate);
 }
 
 .nav-wrapper {
@@ -73,10 +73,6 @@
   }
 }
 
-@media (min-width: 1280px) {
-  .main-nav {
-    padding-inline: var(--side-gutter);
-  }
-}
+/* @media (min-width: 1280px) { } */
 
 /* @media (min-width: 1536px) { } */
